# content-moderation-mvp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  model_downloader.py  pyproject.toml  resources.txt
app/: main.py
app/api/: router.py
app/models_management/: model_loader.py  predictor.py
app/routers/: router.py
app/schemas/: metrics.py  moderation.py
app/scripts/: analyse_logs.py  model_downloader.py
app/services/: metrics_service.py  moderation_service.py
app/tests/: test_metrics_endpoint.py  test_moderation_endpoint.py
app/utils/: metrics.py  predictor.py
src/models/: moderation_model.py
