[project]
name = "content-moderation-mvp"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Ramos"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
